feat: cooperation page mobile version

--- a/src/components/_benefits.html
+++ b/src/components/_benefits.html
@@ -5,53 +5,31 @@
                 <h2 class="benefits__title h h_h1">Дополнительная выгода на мелкооптовые заказы</h2>
 
                 <p class="benefits__description text__regular-18">
-                    Компания Миррэй предлагает выгодные цены на товары для флористов для всех типов клиентов –
-                    физических лиц, юридических лиц и индивидуальных предпринимателей. У нас удобные способы
-                    заказа и гибкие цены в зависимости от объема покупки.
-                </p>
-
-                <p class="benefits__description text__regular-18">
-                    Для мелкооптовых заказов на общую сумму <span>до 100 000 рублей</span> по оптовому прайсу,
-                    существует также <span>отдельная скидочная система</span>:
+                    Для мелкооптовых заказов на общую сумму <strong>до 100 000 рублей</strong> по оптовому
+                    прайсу, существует также <span>отдельная скидочная система</span>:
                 </p>
             </div>
 
             <ul class="benefits__list">
                 <li class="benefits__item">
-                    <span class="benefits__item-subtitle"> Скидка 5% </span>
-
                     <strong class="benefits__item-discard h h_h3"> 5% </strong>
 
-                    <p class="benefits__item-text">
-                        На заказ от <strong>15 000 до 30 000 рублей,</strong> Вы получаете скидку 5%
-                    </p>
+                    <p class="benefits__item-text">от 15 000 до 30 000 рублей</p>
                 </li>
                 <li class="benefits__item">
-                    <span class="benefits__item-subtitle">Скидка 6%</span>
-
                     <strong class="benefits__item-discard h h_h3"> 6%</strong>
 
-                    <p class="benefits__item-text">
-                        На заказ от <strong> 30 000 до 40 000 рублей, </strong> Вы получаете скидку 6%
-                    </p>
+                    <p class="benefits__item-text">30 000 до 40 000 рублей</p>
                 </li>
                 <li class="benefits__item">
-                    <span class="benefits__item-subtitle"> Скидка 7% </span>
-
                     <strong class="benefits__item-discard h h_h3"> 7% </strong>
 
-                    <p class="benefits__item-text">
-                        На заказ от <strong>40 000 до 50 000 рублей,</strong> Вы получаете скидку 7%
-                    </p>
+                    <p class="benefits__item-text">от 40 000 до 50 000 рублей</p>
                 </li>
                 <li class="benefits__item">
-                    <span class="benefits__item-subtitle"> Скидка 8% </span>
-
                     <strong class="benefits__item-discard h h_h3"> 8% </strong>
 
-                    <p class="benefits__item-text">
-                        На заказ от <strong>50 000 до 100 000 рублей,</strong> Вы получаете скидку 8%.
-                    </p>
+                    <p class="benefits__item-text">от 50 000 до 100 000 рублей</p>
                 </li>
             </ul>
         </div>
