--- a/src/components/_figuration.html
+++ b/src/components/_figuration.html
@@ -7,54 +7,105 @@
                 Для удобства всегда доступны три варианта оформления заказа:
             </span>
 
-            <ul class="figuration__list">
-                <li class="figuration__item">
-                    <figure class="figuration__item-icon">
-                        <img src="../assets/images/icons/globus.svg" alt="" />
-                    </figure>
+            <div class="figuration__slider figuration-swiper swiper">
+                <ul class="swiper-wrapper figuration__list">
+                    <li class="swiper-slide">
+                        <div class="figuration__item">
+                            <figure class="figuration__item-icon">
+                                <img src="../assets/images/icons/globus.svg" alt="" />
+                            </figure>
 
-                    <strong class="figuration__item-counter h h_h1"> 01 </strong>
+                            <strong class="figuration__item-counter h h_h1"> 01 </strong>
 
-                    <p class="figuration__item-description text__regular-20">
-                        Оформление заказа онлайн прямо  на данном сайте через корзину
-                    </p>
+                            <p class="figuration__item-description text__regular-20">
+                                Оформление заказа онлайн прямо  на данном сайте через корзину
+                            </p>
 
-                    <a href="#" class="figuration__item-link btn"> В каталог </a>
-                </li>
-                <li class="figuration__item">
-                    <figure class="figuration__item-icon">
-                        <img src="../assets/images/icons/receipt.svg" alt="" />
-                    </figure>
+                            <a href="#" class="figuration__item-link btn"> В каталог </a>
+                        </div>
+                    </li>
+                    <li class="swiper-slide">
+                        <div class="figuration__item">
+                            <div class="figuration__item-wrapper">
+                                <figure class="figuration__item-icon">
+                                    <img src="../assets/images/icons/receipt.svg" alt="" />
+                                </figure>
 
-                    <strong class="figuration__item-counter h h_h1"> 02 </strong>
+                                <strong class="figuration__item-counter h h_h1"> 02 </strong>
 
-                    <p class="figuration__item-description text__regular-20">
-                        Оформление заказа по цветным и информативным фото-прайсам, которые предоставляют наши
-                        специалисты по запросу
-                    </p>
-                </li>
-                <li class="figuration__item">
-                    <figure class="figuration__item-icon">
-                        <img src="../assets/images/icons/shop.svg" alt="" />
-                    </figure>
+                                <p class="figuration__item-description text__regular-20">
+                                    Оформление заказа по цветным и информативным фото-прайсам, которые предоставляют наши
+                                    специалисты по запросу
+                                </p>
+                            </div>
 
-                    <strong class="figuration__item-counter h h_h1"> 03 </strong>
+                            <div class="header__phone">
+                                <button class="header__phone-btn">
+                                    <svg width="29" height="28" viewBox="0 0 29 28" fill="none" xmlns="http://www.w3.org/2000/svg" class="phone">
+                                        <mask id="mask0_3308_546" style="mask-type: alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="29" height="28">
+                                            <rect x="0.5" width="28" height="28" fill="#D9D9D9"></rect>
+                                        </mask>
+                                        <g mask="url(#mask0_3308_546)">
+                                            <path d="M23.1804 23.9165C20.9817 23.9165 18.7729 23.4054 16.554 22.383C14.3351 21.3607 12.2946 19.9184 10.4324 18.0563C8.57771 16.1941 7.1392 14.1554 6.11687 11.9403C5.09454 9.72512 4.58337 7.51818 4.58337 5.31948C4.58337 4.96948 4.70004 4.67595 4.93337 4.43888C5.16671 4.20179 5.45837 4.08325 5.80837 4.08325H9.61346C9.90812 4.08325 10.168 4.17936 10.3931 4.37156C10.6182 4.56377 10.7614 4.80122 10.8227 5.0839L11.4913 8.51656C11.5377 8.83515 11.528 9.10887 11.4622 9.33772C11.3964 9.56656 11.2782 9.75875 11.1077 9.91431L8.41313 12.5371C8.8469 13.3313 9.34236 14.0825 9.89952 14.7907C10.4567 15.499 11.0598 16.1754 11.709 16.8201C12.3492 17.4603 13.0297 18.0548 13.7507 18.6038C14.4716 19.1527 15.2501 19.6635 16.0862 20.1361L18.7045 17.4954C18.887 17.3055 19.108 17.1724 19.3675 17.0961C19.627 17.0198 19.8966 17.0011 20.1763 17.04L23.416 17.6996C23.7107 17.7774 23.9511 17.9277 24.1373 18.1505C24.3235 18.3734 24.4167 18.6262 24.4167 18.9089V22.6915C24.4167 23.0415 24.2981 23.3332 24.061 23.5665C23.824 23.7999 23.5304 23.9165 23.1804 23.9165Z" fill="#1D1D1B"></path>
+                                        </g>
+                                    </svg>
+                                    <span>+7 (495) 120-44-98</span>
+                                    <svg width="29" height="28" viewBox="0 0 29 28" fill="none" xmlns="http://www.w3.org/2000/svg" class="arrow">
+                                        <mask id="mask0_3308_551" style="mask-type: alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="29" height="28">
+                                            <rect x="0.5" width="28" height="28" fill="#D9D9D9"></rect>
+                                        </mask>
+                                        <g mask="url(#mask0_3308_551)">
+                                            <path d="M13.9401 16.5362L10.2638 12.8599C10.2131 12.8092 10.1731 12.7526 10.144 12.6901C10.1148 12.6275 10.1002 12.5605 10.1002 12.489C10.1002 12.3461 10.1486 12.2219 10.2452 12.1164C10.3419 12.011 10.4693 11.9583 10.6275 11.9583H18.3723C18.5304 11.9583 18.6578 12.0115 18.7545 12.1179C18.8512 12.2244 18.8995 12.3486 18.8995 12.4906C18.8995 12.5261 18.8449 12.6493 18.7357 12.8602L15.0596 16.5363C14.9751 16.6208 14.8878 16.6825 14.7976 16.7213C14.7073 16.7602 14.6081 16.7797 14.4999 16.7797C14.3916 16.7797 14.2924 16.7602 14.2022 16.7213C14.112 16.6825 14.0246 16.6207 13.9401 16.5362Z" fill="#1D1D1B"></path>
+                                        </g>
+                                    </svg>
+                                </button>
+                                <ul class="header__phone-list">
+                                    <li>
+                                        <span>Оптовый отдел продаж:</span>
+                                        <p><a href="#">8 800 600 28 20</a></p>
+                                        <span>Пн - Пт: с 9:00 до 18:00 Сб, Вс: : выходные</span>
+                                    </li>
+                                    <li>
+                                        <span>Оптово-розничный магазин:</span>
+                                        <p><a href="#">8 800 600 28 20</a></p>
+                                        <span>Пн - Вс: с 8:00 до 18:30 Без выходных </span>
+                                    </li>
+                                </ul>
 
-                    <p class="figuration__item-description text__regular-20">
-                        Покупка товаров непосредственно в нашем оптово-розничном магазине
-                    </p>
+                                <div data-modal="#phone-figuration" class="header__phone-wrapper">
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="swiper-slide">
+                       <div class="figuration__item">
+                           <figure class="figuration__item-icon">
+                               <img src="../assets/images/icons/shop.svg" alt="" />
+                           </figure>
 
-                    <div class="figuration__item-bottom">
-                        <figure class="figuration__item-bottom-icon">
-                            <img src="../assets/images/icons/location.svg" alt="" />
-                        </figure>
+                           <strong class="figuration__item-counter h h_h1"> 03 </strong>
 
-                        <p class="figuration__item-bottom-text text__regular-20">
-                            г. Москва, поселение Сосенское, Калужское шоссе, 22-й километр, стр. 10
-                        </p>
-                    </div>
-                </li>
-            </ul>
+                           <p class="figuration__item-description text__regular-20">
+                               Покупка товаров непосредственно в нашем оптово-розничном магазине
+                           </p>
+
+                           <div class="figuration__item-bottom">
+                               <figure class="figuration__item-bottom-icon">
+                                   <img src="../assets/images/icons/location.svg" alt="" />
+                               </figure>
+
+                               <p class="figuration__item-bottom-text text__regular-20">
+                                   г. Москва, поселение Сосенское, Калужское шоссе, 22-й километр, стр. 10
+                               </p>
+                           </div>
+                       </div>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="figuration-pagination swiper-pagination">
+
+            </div>
         </div>
     </div>
 </section>
