--- a/src/components/modals.html
+++ b/src/components/modals.html
@@ -114,3 +114,32 @@
         </div>
     </div>
 </div>
+
+<div id="phone-figuration" aria-hidden="true" class="modal info-modal">
+    <div class="modal__wrapper">
+        <div class="modal__content">
+            <div class="modal__body">
+                <button data-close type="button" class="modal__close">
+                    <img src="./assets/images/icons/close.svg" alt="" class="modal__close-icon" />
+                </button>
+
+                <ul class="header__phone-list">
+                    <li>
+                        <span>Оптовый отдел продаж:</span>
+                        <p><a href="#">8 800 600 28 20</a></p>
+                        <span>Пн - Пт: с 9:00 до 18:00 Сб, Вс: : выходные</span>
+                    </li>
+                    <li>
+                        <span>Оптово-розничный магазин:</span>
+                        <p><a href="#">8 800 600 28 20</a></p>
+                        <span>Пн - Вс: с 8:00 до 18:30 Без выходных </span>
+                    </li>
+                </ul>
+
+                <button class="header__phone-button btn">
+                    Заказать звонок
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
