--- a/src/scss/dev/ukik0.scss
+++ b/src/scss/dev/ukik0.scss
@@ -21,3 +21,4 @@ figure {
 @import '../sections/basket';
 @import '../sections/contacts';
 @import '../sections/connection';
+@import '../sections/payment';
