--- a/src/components/_consultation.html
+++ b/src/components/_consultation.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="consultation__content">
             <div class="consultation__info">
-                <h2 class="consultation__info-title h h_h1">Нужна консультация?</h2>
+                <h2 class="consultation__info-title h h_h1">Хотите стать оптовым партнером?</h2>
 
                 <p class="consultation__info-text text__regular-18">
                     Оставьте свои данные, и наш менеджер перезвонит вам в ближайшее время
@@ -11,18 +11,17 @@
                 <form data-dev action="#" class="consultation__info-form">
                     <div class="input text__regular-16">
                         <input
-                            id="name"
+                            id="email"
                             data-validate
                             data-required
                             autocomplete="off"
-                            type="text"
+                            type="email"
                             name="form[]"
-                            placeholder="Ваше имя"
+                            placeholder="Почта"
                             class="input__field"
                         />
-                        <label for="name" class="input__label" data-hint="*Заполните поле"></label>
+                        <label for="email" class="input__label" data-hint="*Заполните поле"></label>
                     </div>
-
                     <div class="input text__regular-16">
                         <input
                             id="phone"
@@ -37,18 +36,31 @@
                         />
                         <label for="phone" class="input__label" data-hint="*Заполните поле"></label>
                     </div>
-
-                    <div class="input text__regular-16 textarea">
-                        <textarea
-                            id="text-field"
-                            data-validate
-                            data-required
-                            autocomplete="off"
-                            name="form[]"
-                            placeholder="Ваш вопрос"
-                            class="input__field"
-                        ></textarea>
-                        <label for="text-field" class="input__label" data-hint="*Заполните поле"></label>
+                    <div class="input text__regular-16">
+                        <input
+                                id="fio"
+                                data-validate
+                                data-required
+                                autocomplete="off"
+                                type="text"
+                                name="form[]"
+                                placeholder="ФИО"
+                                class="input__field"
+                        />
+                        <label for="fio" class="input__label" data-hint="*Заполните поле"></label>
+                    </div>
+                    <div class="input text__regular-16">
+                        <input
+                                id="organization"
+                                data-validate
+                                data-required
+                                autocomplete="off"
+                                type="text"
+                                name="form[]"
+                                placeholder="Название вашей организации"
+                                class="input__field"
+                        />
+                        <label for="organization" class="input__label" data-hint="*Заполните поле"></label>
                     </div>
 
                     <button type="submit" class="consultation__info-form-button form__btn btn">
@@ -63,3 +75,90 @@
         </div>
     </div>
 </section>
+<script>
+    const markers = [
+        {
+            tag: 'Главный офис',
+            coordinate: [37.539626, 55.65015],
+            active: false,
+            card: 'map-card-1'
+        },
+        {
+            tag: 'Оптово-розничный магазин',
+            coordinate: [37.471102, 55.60101],
+            active: false,
+            card: 'map-card-2'
+        },
+        {
+            tag: 'Склад',
+            coordinate: [37.26184, 55.658317],
+            active: false,
+            card: 'map-card-3'
+        }
+    ];
+
+    async function initMap() {
+        await ymaps3.ready;
+        const { YMap, YMapDefaultSchemeLayer, YMapDefaultFeaturesLayer, YMapMarker } = ymaps3;
+        const map = new YMap(document.getElementById('main-map'), {
+            location: {
+                center: [37.47971415087885, 55.621295640143664],
+                zoom: 12
+            }
+        });
+
+        map.addChild(new YMapDefaultSchemeLayer());
+        map.addChild(new YMapDefaultFeaturesLayer({ zIndex: 1800 }));
+
+        markers.forEach((el, i) => {
+            let content = document.createElement('div');
+            content.classList.add('marker', el.card);
+            content.insertAdjacentHTML(
+                'beforeend',
+                `
+                <div class="marker__content">
+                    <div class="marker__svg">
+                     <img src="./assets/images/marker-logo.svg" alt="" />
+                    </div>
+                    <div class="marker__text">${el.tag}</div>
+                </div>
+			    `
+            );
+            el.active ? content.classList.add('hover') : null;
+            clickMarker(content, el);
+
+            const marker = new YMapMarker({ coordinates: el.coordinate, draggable: false }, content);
+            map.addChild(marker);
+        });
+    }
+
+    function clickMarker(content, marker) {
+        content.addEventListener('mouseenter', function () {
+            changeMarkers(content, marker);
+            document.getElementById(marker.card).classList.add('hover');
+        });
+    }
+
+    function changeMarkers(content, marker) {
+        document.querySelectorAll('.marker').forEach((el) => el.classList.remove('hover'));
+        document.querySelectorAll('.map-card').forEach((el) => el.classList.remove('hover'));
+        markers.forEach((el) => (el.active = false));
+        marker.active = true;
+        content.classList.add('hover');
+    }
+
+    initMap();
+
+    document.querySelectorAll('.map-card').forEach((el) => {
+        el.addEventListener('mouseenter', () => {
+            document.querySelectorAll('.map-card').forEach((el) => el.classList.remove('hover'));
+            document.querySelectorAll('.marker').forEach((el) => el.classList.remove('hover'));
+
+            el.classList.add('hover');
+
+            document.querySelectorAll('.marker').forEach((marker) => {
+                marker.classList.contains(el.id) && marker.classList.add('hover');
+            });
+        });
+    });
+</script>
