--- a/src/scss/sections/_benefits.scss
+++ b/src/scss/sections/_benefits.scss
@@ -3,20 +3,40 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+
+        @include small-tablet{
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 8rem;
+        }
     }
 
     &__text {
         max-width: 67.6rem;
         width: 100%;
+
+        @include small-tablet{
+            max-width: 100%;
+        }
     }
 
     &__title {
         margin-bottom: 6rem;
+
+        @include small-tablet{
+            margin-bottom: 1.6rem;
+            font-weight: 600;
+            font-size: 4.8rem;
+            line-height: 110%;
+            letter-spacing: 0.04em;
+        }
     }
 
     &__description {
-        &:not(:last-child) {
-            margin-bottom: 2rem;
+        @include small-tablet{
+            font-weight: 400;
+            font-size: 3rem;
+            line-height: 130%;
         }
 
         span {
@@ -29,6 +49,13 @@
         display: grid;
         grid-template-columns: repeat(2, 39rem);
         gap: 4rem;
+
+        @include small-tablet{
+            display: flex;
+            flex-direction: column;
+            gap: 1.6rem;
+            width: 100%;
+        }
     }
 
     &__item {
@@ -42,6 +69,15 @@
         text-align: center;
         gap: 3rem;
 
+        @include small-tablet{
+            padding: 3.2rem;
+            border-radius: 4.8rem;
+            gap: 3.2rem;
+            flex-direction: row;
+            align-items: center;
+            justify-content: flex-start;
+        }
+
         &-discard {
             @include sizes(8rem, 8rem);
             border-radius: 50%;
@@ -50,6 +86,14 @@
             justify-content: center;
             background-color: $pink;
             color: $white;
+
+            @include small-tablet{
+                @include sizes(12rem, 12rem);
+                font-weight: 500;
+                font-size: 3.6rem;
+                line-height: 120%;
+                letter-spacing: 0.04em;
+            }
         }
     }
 }
