--- a/src/scss/sections/_cooperation.scss
+++ b/src/scss/sections/_cooperation.scss
@@ -1,36 +1,69 @@
 .cooperation {
     &__title {
         margin-bottom: 6rem;
+
+        @include small-tablet{
+            margin-bottom: 8rem;
+        }
     }
 
     &__content {
         display: flex;
         justify-content: space-between;
+
+        @include small-tablet{
+            flex-direction: column;
+            gap: 9.2rem;
+        }
     }
 
     &__text {
-        max-width: 88.8rem;
+        max-width: 66.8rem;
         width: 100%;
+
+        @include small-tablet{
+            max-width: 100%;
+        }
     }
 
     &__description {
         color: $grey-text;
 
+        @include small-tablet{
+            font-weight: 400;
+            font-size: 3rem;
+            line-height: 130%;
+        }
+
         &:not(:last-child) {
-            margin-bottom: 3.2rem;
+            margin-bottom: 2.2rem;
+
+            @include small-tablet{
+                margin-bottom: 3.2rem;
+            }
         }
     }
 
     &__promotion {
         display: flex;
         flex-direction: column;
-        gap: 4rem;
-        max-width: 67.7rem;
+        max-width: 85.7rem;
         width: 100%;
+        margin-top: -3.1rem;
+
+        @include small-tablet{
+            max-width: 100%;
+            margin-top: 0;
+                gap: 1.6rem;
+        }
 
         &-top {
             display: flex;
             gap: 4rem;
+
+            @include small-tablet{
+                gap: 3.2rem;
+            }
         }
 
         &-block {
@@ -38,41 +71,61 @@
             border-radius: 2.4rem;
             position: relative;
 
+            @include small-tablet{
+                border-radius: 4rem;
+            }
+
+            &-title {
+                @include small-tablet{
+                    font-weight: 500;
+                    font-size: 4.2rem;
+                    line-height: 120%;
+                    letter-spacing: 0.04em;
+                }
+            }
+
             &-subtitle {
                 color: $grey-text;
+
+                @include small-tablet{
+                    font-weight: 500;
+                    font-size: 3rem;
+                    line-height: 120%;
+                    letter-spacing: 0.04em;
+                }
             }
 
             &:not(.--image) {
-                padding: 4.7rem 3.2rem;
+                padding: 5.2rem 4.8rem;
                 display: flex;
                 flex-direction: column;
-                gap: 1.6rem;
-                flex: 0 1 39.2rem;
+                gap: 2.8rem;
+                flex: 1 1 39.2rem;
+
+                @include small-tablet{
+                    padding: 3.2rem;
+                    gap: 3.2rem;
+                    flex: 1 1 46.6rem;
+                }
             }
 
             &.--image {
                 flex: 0 1 24.6rem;
+
+                @include small-tablet{
+                    flex: 0 1 23.2rem;
+                }
             }
 
             &-image {
                 position: absolute;
                 width: 100%;
                 bottom: 0;
-            }
-        }
 
-        &-card {
-            padding: 2.4rem;
-            background-color: $light-green;
-            border-radius: 2.4rem;
-            color: $white;
-
-            &-text {
-                max-width: 37.5rem;
-                width: 100%;
-                display: flex;
-                flex-direction: column;
-                gap: 1.6rem;
+                @include small-tablet{
+                    transform: scale(1.2);
+                    bottom: 3.2rem;
+                }
             }
         }
     }
