--- a/src/scss/sections/_about-main.scss
+++ b/src/scss/sections/_about-main.scss
@@ -1,84 +1,62 @@
-.about-main {
-    &__wrapper {
+.about {
+    &__content {
         display: flex;
         justify-content: space-between;
-    }
 
-    &__left {
-        width: 68.8rem;
-    }
-
-    &__title {
-        font-size: 4.8rem;
-        font-weight: 600;
-        margin-bottom: 2rem;
+        @include small-tablet {
+            flex-direction: column-reverse;
+            gap: 4.8rem;
+        }
     }
 
     &__text {
-        font-size: 2rem;
-        font-weight: 400;
-        width: 53.5rem;
-        margin-bottom: 5.2rem;
+        max-width: 80rem;
+        width: 100%;
+        margin-top: 4.8rem;
+
+        @include small-tablet {
+            max-width: 100%;
+            margin-top: 0;
+        }
     }
 
-    &__content {
-        position: relative;
+    &__title {
+        margin-bottom: 4rem;
+
+        @include small-tablet {
+            margin-bottom: 4.8rem;
+        }
+    }
+
+    &__description {
+        font-weight: 400;
+        font-size: 2rem;
+        color: $grey-text;
+
+        @include small-tablet {
+            font-size: 3rem;
+            line-height: 130%;
+        }
+
+        &:not(:last-of-type) {
+            margin-bottom: 1rem;
+        }
     }
 
     &__image {
-        width: 82rem;
-        height: 49.2rem;
-        border-radius: 6rem;
+        max-width: 82rem;
+        width: 100%;
+        border-radius: 2.4rem;
+
+        @include small-tablet {
+            max-width: 100%;
+            border-radius: 4.8rem;
+            height: 58.2rem;
+        }
+
         img {
-            width: 100%;
-            height: 100%;
+            border-radius: inherit;
             object-fit: cover;
-            border-radius: 6rem;
-        }
-    }
-
-    &__offer {
-        position: absolute;
-        z-index: 2;
-        width: 39rem;
-        height: 21.5rem;
-        border-radius: 4rem;
-        background-image: url(../assets/images/sections/about/bgfon1.png);
-        background-repeat: no-repeat;
-        background-size: 100% 100%;
-        padding: 3.2rem 2.4rem;
-        top: 2rem;
-        left: -14.3rem;
-        &-text {
-            font-size: 1.8rem;
-            font-weight: 500;
-            margin-bottom: 2rem;
-            color: #ffffff;
-            width: 32.2rem;
-        }
-    }
-
-    &__exp {
-        width: 23.9rem;
-        padding: 2.6rem;
-        border-radius: 4rem;
-        background-color: $bgFon;
-        position: absolute;
-        bottom: 2rem;
-        right: 2rem;
-        display: flex;
-        flex-direction: column;
-        strong {
-            font-size: 2.8rem;
-            font-weight: 600;
-            margin-bottom: 0.8rem;
-            display: block;
-        }
-
-        span {
-            font-size: 1.8rem;
-            font-weight: 400;
-            display: block;
         }
     }
 }
