--- a/src/components/_about-director.html
+++ b/src/components/_about-director.html
@@ -8,6 +8,10 @@
                 <div class="about-director__block"></div>
             </div>
             <div class="about-director__text">
+                <figure class="about-director__text-icon">
+                    <img src="../assets/images/icons/blockquotes.svg" alt="">
+                </figure>
+                
                 <div class="about-director__text-title">
                     <strong>Соловьева Елена Васильевна</strong>
                     <span>Генеральный директор «МИРРЭЙ» </span>
