--- a/src/scss/sections/_about-mission.scss
+++ b/src/scss/sections/_about-mission.scss
@@ -1,94 +1,79 @@
-.about-mission {
-    &__wrapper {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+.mission {
+    &__content {
+        position: relative;
     }
 
-    &__left {
-        width: 68.1rem;
+    &__info {
+        padding: 6rem 12rem;
+        border-radius: 2.4rem;
+        background-color: $grey-bg;
+        max-width: calc(100% - 14.3rem);
+        width: 100%;
+
+        &-text {
+            max-width: 76rem;
+            width: 100%;
+        }
     }
 
     &__title {
-        font-size: 4.8rem;
-        margin-bottom: 5.2rem;
+        margin-bottom: 4rem;
     }
 
-    &__text {
+    &__description {
+        font-weight: 400;
         font-size: 2rem;
         color: $grey-text;
-    }
 
-    &__right {
-        position: relative;
-        padding-right: 14.7rem;
-    }
-
-    &__image {
-        width: 67.1rem;
-        height: 50.8rem;
-        border-radius: 3rem;
-        img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            border-radius: 3rem;
-        }
-    }
-
-    &__block-wrap {
-        transform: translate(0, -50%);
-        right: 0;
-        top: 50%;
-        position: absolute;
-        &::before {
-            position: absolute;
-            content:'';
-            width: 6rem;
-            height: 5.1rem;
-            background-image: url(../assets/images/sections/about/galka.svg);
-            background-repeat: no-repeat;
-            background-size: 100% 100%;
-            z-index: 3;
-            right: 3.2rem;
-            top: -2.4rem;
-        }
-    }
-
-    &__block {
-        position: relative;
-        width: 42.1rem;
-        border-radius: 3rem;
-        background-color: $bgFon;
-        padding: 5.2rem 3.2rem;
-        display: flex;
-        flex-direction: column;
-        z-index: 2;
-        overflow: hidden;
-        &::after {
-            position: absolute;
-            content:'';
-            z-index: -1;
-            background-color: rgb(255, 255, 255);
-            width: 79.2rem;
-            height: 64.4rem;
-            opacity: 0.6;
-            border-radius: 50%;
-            top: -30rem;
-            left: -48rem;
-        }
-      
-        strong {
-            display: block;
-            font-size: 2rem;
-            font-weight: 600;
+        &:not(:last-of-type) {
             margin-bottom: 2rem;
         }
 
-        span {
-            font-size: 2rem;
-            font-weight: 400;
-            color: $grey-text;
+        &:last-of-type {
+            margin-bottom: 4rem;
+        }
+    }
+
+    &__blockquote {
+        display: flex;
+        flex-direction: column;
+        gap: 1.2rem;
+        font-weight: 600;
+        font-size: 2rem;
+        line-height: 120%;
+        letter-spacing: 0.04em;
+        color: $green;
+        margin: 0;
+
+        p {
+            max-width: 67.6rem;
+            width: 100%;
+        }
+
+        footer {
+            display: block;
+            width: fit-content;
+            margin-left: auto;
+        }
+    }
+
+    &__poster {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        @include sizes(67.8rem, 79rem);
+        right: 0;
+
+        &-image {
+            width: 100%;
+            height: 100%;
+            border-radius: 3rem;
+
+            img {
+                height: 100%;
+                border-radius: inherit;
+                object-fit: cover;
+            }
         }
     }
 }
