--- a/src/scss/sections/_about-task.scss
+++ b/src/scss/sections/_about-task.scss
@@ -1,63 +1,105 @@
-.about-task {
-    &__wrapper {
+.task {
+    &__content {
         display: flex;
         justify-content: space-between;
-        align-items:center;
+        gap: 4rem;
     }
 
-    &__left {
-        width: 81rem;
+    &__info {
+        max-width: 57.3rem;
+        width: 100%;
+
+        &-list {
+            display: flex;
+            flex-direction: column;
+            gap: 2rem;
+        }
+
+        &-item {
+            display: flex;
+            align-items: center;
+            gap: 1.6rem;
+            padding: 2.4rem;
+            border-radius: 2rem;
+            background-color: $grey-bg;
+
+            &-icon {
+                @include sizes(7.5rem, 7.5rem);
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border-radius: 50%;
+                background-color: $green;
+
+                img {
+                    @include sizes(3.2rem, 3.2rem);
+                }
+            }
+
+            &-title {
+                font-weight: 600;
+                font-size: 2rem;
+                line-height: 120%;
+                letter-spacing: 0.04em;
+            }
+        }
     }
 
     &__title {
-        font-size: 4.8rem;
-        margin-bottom: 2rem;
+        margin-bottom: 2.8rem;
     }
 
-    &__span {
+    &__description {
+        margin-bottom: 4.8rem;
         font-size: 2rem;
-        font-weight: 400;
         color: $grey-text;
-        margin-bottom: 6rem;
     }
 
     &__image {
-        width: 67.7rem;
-        height: 50rem;
-        border-radius: 2.4rem;
+        border-radius: 2rem;
+        @include sizes(62rem, 100%);
+
         img {
-            width: 100%;
+            border-radius: inherit;
             height: 100%;
             object-fit: cover;
-            border-radius: 2.4rem;
         }
     }
 
-    &__lists {
-        list-style-type: none; 
-	    counter-reset: num;
-    }
+    &__promotion {
+        display: flex;
+        flex-direction: column;
+        gap: 3.9rem;
 
-    &__item {
-        font-size: 2rem;
-        font-weight: 600;
-        margin-bottom: 2rem;
-        color: rgb(29, 29, 27);
-        position: relative;
-        padding-left: 3rem;	
-        &:before {
-            content:'/' counter(num) ; 
-            counter-increment: num;
-            display: inline-block;	
-            position: absolute;
-            top: 0px;
-            left: 0;  
-            color: $pink;
-            text-align: right;
+        &-text {
         }
-    }
 
-    &__item:last-child {
-        margin-bottom: 0;
+        &-title {
+            font-weight: 600;
+            font-size: 2rem;
+            line-height: 120%;
+            letter-spacing: 0.04em;
+            margin-bottom: 0.8rem;
+          display: block;
+        }
+
+        &-description {
+            font-size: 1.8rem;
+            margin-bottom: 2.4rem;
+        }
+
+        &-button {
+        }
+
+        &-image {
+            @include sizes(60.7rem, 100%);
+            border-radius: 2rem;
+
+            img {
+                border-radius: inherit;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
     }
 }
