--- a/src/scss/sections/_about-mission.scss
+++ b/src/scss/sections/_about-mission.scss
@@ -3,6 +3,11 @@
 
     &__content {
         position: relative;
+
+        @include small-tablet{
+            display: flex;
+            flex-direction: column-reverse;
+        }
     }
 
     &__info {
@@ -12,14 +17,35 @@
         max-width: calc(100% - 14.3rem);
         width: 100%;
 
+        @include small-tablet{
+            max-width: 100%;
+            padding: 4.8rem 3.2rem;
+            border-radius: 4.8rem;
+            position: relative;
+            z-index: 2;
+            margin-top: -42rem;
+        }
+
         &-text {
             max-width: 76rem;
             width: 100%;
+
+            @include small-tablet{
+                max-width: 100%;
+            }
         }
     }
 
     &__title {
         margin-bottom: 4rem;
+
+        @include small-tablet{
+            font-weight: 600;
+            font-size: 4.8rem;
+            line-height: 110%;
+            letter-spacing: 0.04em;
+            margin-bottom: 3.2rem;
+        }
     }
 
     &__description {
@@ -27,12 +53,21 @@
         font-size: 2rem;
         color: $grey-text;
 
+        @include small-tablet{
+            font-size: 3rem;
+            line-height: 130%;
+        }
+
         &:not(:last-of-type) {
             margin-bottom: 2rem;
         }
 
         &:last-of-type {
             margin-bottom: 4rem;
+
+            @include small-tablet{
+                margin-bottom: 4.8rem;
+            }
         }
     }
 
@@ -47,15 +82,29 @@
         color: $green;
         margin: 0;
 
+        @include small-tablet{
+            gap: 3.2rem;
+            font-weight: 400;
+            font-size: 3.6rem;
+        }
+
         p {
             max-width: 67.6rem;
             width: 100%;
+
+            @include small-tablet{
+                max-width: 100%;
+            }
         }
 
         footer {
             display: block;
             width: fit-content;
             margin-left: auto;
+
+            @include small-tablet{
+                margin-left: 0;
+            }
         }
     }
 
@@ -66,10 +115,20 @@
         @include sizes(67.8rem, 79rem);
         right: 0;
 
+        @include small-tablet{
+            @include sizes(100%, 81.8rem);
+            transform: translateY(0);
+            position: initial;
+        }
+
         &-image {
             width: 100%;
             height: 100%;
             border-radius: 3rem;
+
+            @include small-tablet{
+                border-radius: 6rem;
+            }
 
             img {
                 height: 100%;
