--- a/src/scss/sections/_about-director.scss
+++ b/src/scss/sections/_about-director.scss
@@ -1,9 +1,18 @@
 .about-director {
     margin-bottom: 26rem;
 
+    @include small-tablet{
+        margin-bottom: 20rem;
+    }
+
     &__wrapper {
         display: flex;
         align-items: flex-end;
+
+        @include small-tablet{
+            flex-direction: column;
+            align-items: flex-start;
+        }
     }
 
     &__content {
@@ -11,6 +20,11 @@
         padding-top: 21.7rem;
         padding-bottom: 1.2rem;
         z-index: 2;
+
+        @include small-tablet{
+            padding: 0;
+            width: 100%;
+        }
     }
 
     &__image {
@@ -21,6 +35,12 @@
         bottom: 1.2rem;
         left: 50%;
         transform: translate(-50%, 0);
+
+        @include small-tablet{
+            width: 40.6rem;
+            height: 52.2rem;
+            bottom: 0;
+        }
     }
 
     &__block {
@@ -30,6 +50,11 @@
         background-color: rgb(85, 148, 121);
         position: relative;
         overflow: hidden;
+
+        @include small-tablet{
+            width: 100%;
+            height: 29.8rem;
+        }
        
         &::before {
             position: absolute;
@@ -71,11 +96,22 @@
         justify-content: center;
         padding: 6.4rem 4rem 7.4rem 13rem;
 
+        @include small-tablet{
+            width: 100%;
+            height: initial;
+            padding: 4.8rem 3.2rem 3.2rem 3.2rem;
+            left: 0;
+        }
+
         &-icon {
             position: absolute;
             top: -2.8rem;
             right: 5.2rem;
             @include sizes(9.7rem, 8.2rem);
+
+            @include small-tablet{
+                display: none;
+            }
 
             img {
                 height: 100%;
@@ -86,6 +122,10 @@
             display: flex;
             flex-direction: column;
             margin-bottom: 4.4rem;
+
+            @include small-tablet{
+                margin-bottom: 3.2rem;
+            }
             strong {
                 display: block;
                 font-weight: 600;
@@ -94,6 +134,14 @@
                 letter-spacing: 0.04em;
                 color: $green;
                 margin-bottom: 1.4rem;
+
+                @include small-tablet{
+                    font-weight: 500;
+                    font-size: 3.6rem;
+                    line-height: 120%;
+                    letter-spacing: 0.04em;
+                    margin-bottom: .8rem;
+                }
             }
 
             span {
@@ -101,6 +149,12 @@
                 font-size: 2rem;
                 font-weight: 600;
                 color: $grey-text;
+
+                @include small-tablet{
+                    font-weight: 500;
+                    font-size: 3rem;
+                    line-height: 120%;
+                }
             }
         }
 
@@ -110,6 +164,12 @@
             font-weight: 400;
             color: $grey-text;
             display: block;
+
+            @include small-tablet{
+                width: 100%;
+                font-size: 3rem;
+                line-height: 130%;
+            }
 
         }
     }
