--- a/src/scss/sections/_about-mission.scss
+++ b/src/scss/sections/_about-mission.scss
@@ -23,7 +23,7 @@
             border-radius: 4.8rem;
             position: relative;
             z-index: 2;
-            margin-top: -42rem;
+            margin-top: -40rem;
         }
 
         &-text {
@@ -60,13 +60,17 @@
 
         &:not(:last-of-type) {
             margin-bottom: 2rem;
+
+            @include small-tablet{
+                margin-bottom: 1rem;
+            }
         }
 
         &:last-of-type {
             margin-bottom: 4rem;
 
             @include small-tablet{
-                margin-bottom: 4.8rem;
+                margin-bottom: 8.8rem;
             }
         }
     }
