feat: about worth section mobile version

--- a/src/components/_about-worth.html
+++ b/src/components/_about-worth.html
@@ -1,35 +1,125 @@
 <section class="about-worth">
     <div class="container">
-        <div class="about-worth__wrapper">
-            <div class="about-worth__title h h_2">Почему стоит выбрать нашу компанию?</div>
+        <div class="about-worth__wrapper _desktop-only">
+            <h2 class="about-worth__title h h_2">Почему стоит выбрать нашу компанию?</h2>
             <div class="about-worth__content">
                 <div class="about-worth__image">
-                    <img src="./assets/images/sections/about/end1.png" alt="">
+                    <img src="./assets/images/sections/about/end1.png" alt="" />
                 </div>
                 <div class="about-worth__image">
-                    <img src="./assets/images/sections/about/end2.png" alt="">
+                    <img src="./assets/images/sections/about/end2.png" alt="" />
                 </div>
                 <div class="about-worth__image">
-                    <img src="./assets/images/sections/about/end3.png" alt="">
+                    <img src="./assets/images/sections/about/end3.png" alt="" />
                 </div>
                 <div class="about-worth__image">
-                    <img src="./assets/images/sections/about/flow.png" alt="">
+                    <img src="./assets/images/sections/about/flow.png" alt="" />
                 </div>
                 <div class="about-worth__text">
                     <div class="about-worth__text-wrap">
-                        <p>Крупные и средние оптовые компании и сети цветочных магазинов по всей России однажды поверили нам и сейчас работают и развиваются вместе с нами. Мы работаем с маленькой наценкой, что позволяет нашим покупателям иметь конкурентное преимущество.</p>
-                        <p>Мы обеспечиваем наших клиентов флористической упаковкой, корзинами и сопутствующими материалами, гарантирующими превратить простые цветы в прекрасные и оригинальные композиции и букеты, которые долго будут радовать Вас, Ваших друзей и близких.</p>
+                        <p>
+                            Крупные и средние оптовые компании и сети цветочных магазинов по всей России
+                            однажды поверили нам и сейчас работают и развиваются вместе с нами. Мы работаем с
+                            маленькой наценкой, что позволяет нашим покупателям иметь конкурентное
+                            преимущество.
+                        </p>
+                        <p>
+                            Мы обеспечиваем наших клиентов флористической упаковкой, корзинами и
+                            сопутствующими материалами, гарантирующими превратить простые цветы в прекрасные и
+                            оригинальные композиции и букеты, которые долго будут радовать Вас, Ваших друзей и
+                            близких.
+                        </p>
                     </div>
                     <div class="about-worth__text-wrap">
-                        <p>Наша команда специалистов всегда готова оказать помощь и консультацию нашим клиентам. Мы следим за последними тенденциями и новинками в области флористики и можем поделиться с вами ценными советами и идеями. Благодаря нашим знаниям и опыту, мы можем помочь Вам создать изысканные цветочные композиции, подходящие для любого события или мероприятия.</p>
-                        <p>Мы понимаем, что каждый клиент уникален и имеет свои потребности. Поэтому мы предлагаем гибкую систему скидок и индивидуальный подход к каждому заказу. Мы стремимся установить долгосрочные партнерские отношения с нашими клиентами и готовы предложить условия оптовых заказов, удовлетворяющие их потребности.</p>
+                        <p>
+                            Наша команда специалистов всегда готова оказать помощь и консультацию нашим
+                            клиентам. Мы следим за последними тенденциями и новинками в области флористики и
+                            можем поделиться с вами ценными советами и идеями. Благодаря нашим знаниям и
+                            опыту, мы можем помочь Вам создать изысканные цветочные композиции, подходящие для
+                            любого события или мероприятия.
+                        </p>
+                        <p>
+                            Мы понимаем, что каждый клиент уникален и имеет свои потребности. Поэтому мы
+                            предлагаем гибкую систему скидок и индивидуальный подход к каждому заказу. Мы
+                            стремимся установить долгосрочные партнерские отношения с нашими клиентами и
+                            готовы предложить условия оптовых заказов, удовлетворяющие их потребности.
+                        </p>
                     </div>
                     <div class="about-worth__text-wrap">
-                        <p>Заказывая товары для флористики у нас, Вы можете быть уверены в высоком качестве и надежности. Мы предлагаем удобные условия доставки по всей стране и регулярное обновление ассортимента, чтобы Вы могли предложить своим клиентам всегда актуальные и привлекательные товары.</p>
-                        <p>Обратитесь к нам, и мы поможем Вам создать впечатляющую флористическую атмосферу с помощью наших качественных и разнообразных товаров!</p>
+                        <p>
+                            Заказывая товары для флористики у нас, Вы можете быть уверены в высоком качестве и
+                            надежности. Мы предлагаем удобные условия доставки по всей стране и регулярное
+                            обновление ассортимента, чтобы Вы могли предложить своим клиентам всегда
+                            актуальные и привлекательные товары.
+                        </p>
+                        <p>
+                            Обратитесь к нам, и мы поможем Вам создать впечатляющую флористическую атмосферу с
+                            помощью наших качественных и разнообразных товаров!
+                        </p>
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="about-worth__content _mobile-only">
+            <h2 class="about-worth__title h h_2">Почему стоит выбрать нашу компанию?</h2>
+
+            <ul class="about-worth__blocks">
+                <li class="about-worth__block">
+                    <figure class="about-worth__block-image">
+                        <img src="./assets/images/sections/about/end1.webp" alt="" />
+                    </figure>
+
+                    <p class="about-worth__block-text">
+                        Наши покупатели — это наша гордость. Крупные и средние оптовые компании и сети цветочных
+                        магазинов по всей России однажды поверили нам и сейчас работают и развиваются вместе с
+                        нами. Мы работаем с маленькой наценкой, что позволяет нашим покупателям иметь конкурентное
+                        преимущество.
+                    </p>
+
+                    <p class="about-worth__block-text">
+                        Мы обеспечиваем наших клиентов флористической упаковкой, корзинами и сопутствующими
+                        материалами, гарантирующими превратить простые цветы в прекрасные и оригинальные
+                        композиции и букеты, которые долго будут радовать Вас, Ваших друзей и близких.
+                    </p>
+                </li>
+                <li class="about-worth__block">
+                    <figure class="about-worth__block-image">
+                        <img src="./assets/images/sections/about/end2.webp" alt="" />
+                    </figure>
+
+                    <p class="about-worth__block-text">
+                        Наша команда специалистов всегда готова оказать помощь и консультацию нашим клиентам. Мы
+                        следим за последними тенденциями и новинками в области флористики и можем поделиться с
+                        вами ценными советами и идеями. Благодаря нашим знаниям и опыту, мы можем помочь Вам
+                        создать изысканные цветочные композиции, подходящие для любого события или мероприятия.
+                    </p>
+
+                    <p class="about-worth__block-text">
+                        Мы понимаем, что каждый клиент уникален и имеет свои потребности. Поэтому мы предлагаем
+                        гибкую систему скидок и индивидуальный подход к каждому заказу. Мы стремимся установить
+                        долгосрочные партнерские отношения с нашими клиентами и готовы предложить условия оптовых
+                        заказов, удовлетворяющие их потребности.
+                    </p>
+                </li>
+                <li class="about-worth__block">
+                    <figure class="about-worth__block-image">
+                        <img src="./assets/images/sections/about/end3.webp" alt="" />
+                    </figure>
+
+                    <p class="about-worth__block-text">
+                        Заказывая товары для флористики у нас, Вы можете быть уверены в высоком качестве и
+                        надежности. Мы предлагаем удобные условия доставки по всей стране и регулярное обновление
+                        ассортимента, чтобы Вы могли предложить своим клиентам всегда актуальные и привлекательные
+                        товары.
+                    </p>
+
+                    <p class="about-worth__block-text">
+                        Обратитесь к нам, и мы поможем Вам создать впечатляющую флористическую атмосферу с помощью
+                        наших качественных и разнообразных товаров!
+                    </p>
+                </li>
+            </ul>
         </div>
     </div>
 </section>
